Fix flex alignment

--- a/name-popularity/src/styles.css
+++ b/name-popularity/src/styles.css
@@ -26,9 +26,12 @@ body {
     background-color: #333;
 }
 
-body {
+.app-root {
     display: -ms-flexbox;
     display: flex;
+}
+
+body {
     color: #fff;
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
